--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -11,16 +11,97 @@
 
 </head>
 
-<body>
-   <section class="home">
+<body class="font-poppins">
+    <main class="min-h-screen bg-black bg-[url(images/background.png)] bg-no-repeat bg-center">
+        <!-- home section -->
+        <section id="homescreen" class="text-white flex min-h-screen justify-center items-center ">
+            <div class="flex flex-col items-center gap-10">
+                <h1 class="text-8xl font-anton ">ALPHA CLASH PRO</h1>
+                <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button onclick="play()" class="btn bg-white text-purple-500 hover:bg-purple-400 hover:text-white py-2 px-4 rounded-lg">Play Now</button>
+            </div>
+        </section>
+        <!-- playground section -->
+        <section id="playground" class="hidden">
+            <div class="flex flex-col items-center gap-20 pt-10">
+                <!-- screen -->
+                <div class="artboard artboard-horizontal phone-6 border-[10px] border-black rounded-2xl bg-[#FFFFFFB3]">
+                    <div class="flex justify-center ">
+                        <p class="bg-black text-white rounded-b-xl px-2 py-2">Don't watch keyboard while playing...</p>
 
-   </section>
-   <section class="playground">
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p id="currentAlphabet" class="text-black text-9xl font-bold uppercase">Y</p>
+                    </div>
+                </div>
 
-   </section>
-   <section class="score">
+                <!-- keyboard -->
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="q" class="kbd">q</kbd>
+                        <kbd id="w" class="kbd">w</kbd>
+                        <kbd id="e" class="kbd">e</kbd>
+                        <kbd id="r" class="kbd">r</kbd>
+                        <kbd id="t" class="kbd">t</kbd>
+                        <kbd id="y" class="kbd">y</kbd>
+                        <kbd id="u" class="kbd">u</kbd>
+                        <kbd id="i" class="kbd">i</kbd>
+                        <kbd id="o" class="kbd">o</kbd>
+                        <kbd id="p" class="kbd">p</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="a" class="kbd">a</kbd>
+                        <kbd id="s" class="kbd">s</kbd>
+                        <kbd id="d" class="kbd">d</kbd>
+                        <kbd id="f" class="kbd">f</kbd>
+                        <kbd id="g" class="kbd">g</kbd>
+                        <kbd id="h" class="kbd">h</kbd>
+                        <kbd id="j" class="kbd">j</kbd>
+                        <kbd id="k" class="kbd">k</kbd>
+                        <kbd id="l" class="kbd">l</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="z" class="kbd">z</kbd>
+                        <kbd id="x" class="kbd">x</kbd>
+                        <kbd id="c" class="kbd">c</kbd>
+                        <kbd id="v" class="kbd">v</kbd>
+                        <kbd id="b" class="kbd">b</kbd>
+                        <kbd id="n" class="kbd">n</kbd>
+                        <kbd id="m" class="kbd">m</kbd>
+                        <kbd id="/" class="kbd">/</kbd>
+                    </div>
+                </div>
+                <!-- score board -->
+                <div class="flex justify-between w-2/4">
+                    <button class="btn rounded-full  bg-purple-500 text-white px-4">
+                        Life
+                        <img src="images/Group 23.png" alt="">
+                        <span>1</span>
+                    </button>
 
-   </section>
+                    <button class="btn rounded-full bg-[#360490] text-white px-4">
+                        Score
+                        <img src="images/monetization_on.png" alt="">
+                        <span>1</span>
+                    </button>
+                </div>
+            </div>
+
+        </section>
+        <!-- score board -->
+        <section class="score flex justify-center items-center min-h-screen hidden">
+            <div class="text-white text-center space-y-6 bg-gradient-to-r from-purple-600 to-indigo-400 rounded-full p-10">
+                <h1 class="text-8xl ">
+                    <span class="font-extrabold">Score:</span>
+                    <span>14</span>
+                </h1>
+                <button class="btn bg-white text-purple-500 hover:bg-purple-400 hover:text-white py-2 px-4 rounded-lg">Play Again</button>
+                <p>Practice will make you a pro!</p>
+            </div>
+        </section>
+    </main>
 </body>
+<script src="alpha-clash.js"></script>
+<script src="utility.js"></script>
 
 </html>
