--- a/index.html
+++ b/index.html
@@ -76,26 +76,26 @@
                     <button class="btn rounded-full  bg-purple-500 text-white px-4">
                         Life
                         <img src="images/Group 23.png" alt="">
-                        <span>1</span>
+                        <span id="currentLife">3</span>
                     </button>
 
                     <button class="btn rounded-full bg-[#360490] text-white px-4">
                         Score
                         <img src="images/monetization_on.png" alt="">
-                        <span>1</span>
+                        <span id="currentScore">0</span>
                     </button>
                 </div>
             </div>
 
         </section>
-        <!-- score board -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <!--final score board -->
+        <section id="finalScore" class=" flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-gradient-to-r from-purple-600 to-indigo-400 rounded-full p-10">
                 <h1 class="text-8xl ">
                     <span class="font-extrabold">Score:</span>
                     <span>14</span>
                 </h1>
-                <button class="btn bg-white text-purple-500 hover:bg-purple-400 hover:text-white py-2 px-4 rounded-lg">Play Again</button>
+                <button id="final"  class="btn bg-white text-purple-500 hover:bg-purple-400 hover:text-white py-2 px-4 rounded-lg">Play Again</button>
                 <p>Practice will make you a pro!</p>
             </div>
         </section>
